--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             child.appendChild(secondGrandChild)
             child.appendChild(thirdGrandChild)
             child.setAttribute("id",id);
-            // return child;   
+            return child;   
         }
         function addTodo(){
             const title = document.getElementById("title").value;
